--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
   <div class="projects-list">
     <div class="project-card">
       <div class="slider">
-        <img src="C:\Users\Admin\Pictures\Screenshots\Screenshot 2025-10-06 145044.png" alt="Border Sleep - Screenshot 1" class="slide active">
+        <img src="https://raw.githubusercontent.com/ozaragaryanfloyd-rgb/portfolio-site/main/images/border1.png" alt="Border Sleep - Screenshot 1" class="slide active">
         <img src="C:\Users\Admin\Pictures\Screenshots\Screenshot 2025-10-06 150506.png" alt="Border Sleep - Screenshot 2" class="slide">
         <img src="C:\Users\Admin\Pictures\Screenshots\Screenshot 2025-10-06 150901.png" alt="Border Sleep - Screenshot 3" class="slide">
         <button class="prev">&#10094;</button>
@@ -511,4 +511,5 @@
     <!-- Replace with your actual email or contact link -->
   </section>
 </body>
+
 </html>
