--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
     <div class="project-card">
       <div class="slider">
         <img src="https://raw.githubusercontent.com/ozaragaryanfloyd-rgb/portfolio-site/main/images/border1.png" alt="Border Sleep - Screenshot 1" class="slide active">
-        <img src="C:\Users\Admin\Pictures\Screenshots\Screenshot 2025-10-06 150506.png" alt="Border Sleep - Screenshot 2" class="slide">
-        <img src="C:\Users\Admin\Pictures\Screenshots\Screenshot 2025-10-06 150901.png" alt="Border Sleep - Screenshot 3" class="slide">
+        <img src="https://raw.githubusercontent.com/ozaragaryanfloyd-rgb/portfolio-site/main/images/border2.png" alt="Border Sleep - Screenshot 2" class="slide">
+        <img src="https://raw.githubusercontent.com/ozaragaryanfloyd-rgb/portfolio-site/main/images/border3.png" alt="Border Sleep - Screenshot 3" class="slide">
         <button class="prev">&#10094;</button>
         <button class="next">&#10095;</button>
       </div>
@@ -513,3 +513,4 @@
 </body>
 
 </html>
+
