--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
 
   <!-- Meta -->
-  <meta name="description" content="Ozaragaryan Floyd — Shopify, WordPress & SEO focused Web Developer. Portfolio showcasing projects and skills." />
+  <meta name="description" content="Ryan FLOYD Ozaraga — Shopify, WordPress & SEO focused Web Developer. Portfolio showcasing projects and skills." />
 
   <style>
     /* -------------------------
@@ -565,7 +565,7 @@
       <div style="display:flex; gap:12px; align-items:center;">
         <div class="logo" style="width:44px; height:44px; display:grid; place-items:center; border-radius:10px; background: linear-gradient(180deg,var(--emerald) 0%, var(--emerald-deep) 100%); color:#07110d; font-weight:700;">OF</div>
         <div>
-          <div style="color:var(--emerald); font-weight:700;">Ozaragaryan Floyd</div>
+          <div style="color:var(--emerald); font-weight:700;">Ryan Floyd Ozaraga</div>
           <div style="font-size:0.86rem; color:var(--muted); margin-top:2px;">Web Developer</div>
         </div>
       </div>
@@ -597,7 +597,7 @@
       </div>
 
       <div class="hero-info">
-        <h1 id="hero-heading">Hi — I'm <span style="color:var(--emerald)">Ozaragaryan Floyd</span></h1>
+        <h1 id="hero-heading">Hi — I'm <span style="color:var(--emerald)">Ryan Floyd P. Ozaraga</span></h1>
         <p class="lead">Web Developer specializing in <strong>Shopify</strong>, <strong>WordPress</strong> and <strong>SEO</strong>. I build fast, accessible stores and sites that convert. <span class="skill-inline">HTML · CSS · JS · PHP · Liquid</span></p>
 
         <div class="hero-ctas" role="group" aria-label="Primary actions">
@@ -697,7 +697,7 @@
 
       <div class="contact-card" role="region" aria-label="Contact information">
         <div style="font-size:1.02rem; color:var(--muted)">Ready to collaborate or have a project in mind?</div>
-        <a href="mailto:your.email@example.com" aria-label="Email Ozaragaryan Floyd">your.email@example.com</a>
+        <a href="mailto:your.email@example.com" aria-label="Email Ozaragaryan Floyd">ozaragaryanfloyd@gmail.com</a>
         <div style="font-size:0.92rem; color:var(--muted)">Prefer a call? Reply with your time zone & we’ll coordinate.</div>
       </div>
     </section>
@@ -854,3 +854,4 @@
 
 </body>
 </html>
+
