--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Ozaragaryan Floyd — Web Developer Portfolio</title>
+  <title>Ryan Floyd — Web Developer Portfolio</title>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
@@ -533,7 +533,7 @@
       <a href="#" class="brand" aria-label="Ozaragaryan Floyd - home">
         <span class="logo" aria-hidden="true">OF</span>
         <span style="display:inline-block">
-          <div style="font-size:0.98rem">Ozaragaryan Floyd</div>
+          <div style="font-size:0.98rem">Ryan Floyd</div>
           <div style="font-size:0.78rem;color:var(--muted);margin-top:-3px">Web Developer</div>
         </span>
       </a>
@@ -854,4 +854,5 @@
 
 </body>
 </html>
+
 
