--- a/index.html
+++ b/index.html
@@ -1088,8 +1088,9 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 
          <h3 class="project-title">Border DME</h3>
 <p class="project-desc">
-  Border DME is a blog website connected to the main store, featuring articles, guides, and healthcare tips related to medical equipment. It’s designed to enhance user engagement and support seamless navigation between the blog and the shop.
+  A blog site connected to the Border DME store, sharing medical insights and product guides.
 </p>
+
   
 
           <div class="project-tags" aria-hidden="false">
@@ -1422,4 +1423,5 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
