--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
       </div>
 
       <div class="hero-info">
-        <h1 id="hero-heading">Hi — I'm <span style="color:var(--emerald)">Ryan Floyd P. Ozaraga</span></h1>
+        <h1 id="hero-heading">Hi! I'm <span style="color:var(--emerald)">Ryan Floyd P. Ozaraga</span></h1>
         <p class="lead">Web Developer specializing in <strong>Shopify</strong>, <strong>WordPress</strong> and <strong>SEO</strong>. I build fast, accessible stores and sites that convert. <span class="skill-inline">HTML · CSS · JS · PHP · Liquid</span></p>
 
         <div class="hero-ctas" role="group" aria-label="Primary actions">
@@ -1447,4 +1447,5 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
