--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
 
   <!-- Meta -->
-  <meta name="description" content="Ryan FLOYD Ozaraga — Shopify, WordPress & SEO focused Web Developer. Portfolio showcasing projects and skills." />
+  <meta name="description" content="Ryan Floyd P. Ozaraga — WordPress, Shopify & SEO focused Web Developer. Portfolio showcasing projects and skills." />
 
   <style>
     /* -------------------------
@@ -984,13 +984,16 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
           <h3 class="project-title">Zen Diamond UK</h3>
           <p class="project-desc">An elegant jewelry e-commerce platform built on WordPress and WooCommerce. Custom theme design, high-end visual styling, SEO optimization, and mobile-first user experience.</p>
 
-          <div class="project-tags" aria-hidden="false">
-            <span class="tag">WordPress</span>
-            <span class="tag">SEO</span>
-            <span class="tag">HTML</span>
-            <span class="tag">CSS</span>
-            <span class="tag">JavaScript</span>
-          </div>
+         <div class="project-tags" aria-hidden="false">
+  <span class="tag">WordPress</span>
+  <span class="tag">Elementor</span>
+  <span class="tag">WooCommerce</span>
+  <span class="tag">SEO</span>
+  <span class="tag">HTML</span>
+  <span class="tag">CSS</span>
+  <span class="tag">JavaScript</span>
+</div>
+
 
           <div class="project-actions">
             <a href="https://www.zendiamond.com/" target="_blank" rel="noopener noreferrer" aria-label="Open Border Sleep website">Visit Site ↗</a>
@@ -1017,13 +1020,16 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
           <h3 class="project-title">Zen Diamond UK</h3>
           <p class="project-desc">An elegant jewelry e-commerce platform built on WordPress and WooCommerce. Custom theme design, high-end visual styling, SEO optimization, and mobile-first user experience.</p>
 
-          <div class="project-tags" aria-hidden="false">
-            <span class="tag">WordPress</span>
-            <span class="tag">SEO</span>
-            <span class="tag">HTML</span>
-            <span class="tag">CSS</span>
-            <span class="tag">JavaScript</span>
-          </div>
+        <div class="project-tags" aria-hidden="false">
+  <span class="tag">WordPress</span>
+  <span class="tag">Elementor</span>
+  <span class="tag">WooCommerce</span>
+  <span class="tag">SEO</span>
+  <span class="tag">HTML</span>
+  <span class="tag">CSS</span>
+  <span class="tag">JavaScript</span>
+</div>
+
 
           <div class="project-actions">
             <a href="https://ia-international.com/zenuk/" target="_blank" rel="noopener noreferrer" aria-label="Open Border Sleep website">Visit Site ↗</a>
@@ -1049,13 +1055,16 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
           <h3 class="project-title">Roche Bianca Albania</h3>
           <p class="project-desc">A stylish WooCommerce jewelry platform highlighting Roche Bianca’s finest silver and gold craftsmanship with a smooth, elegant user experience.</p>
 
-          <div class="project-tags" aria-hidden="false">
-            <span class="tag">WordPress</span>
-            <span class="tag">SEO</span>
-            <span class="tag">HTML</span>
-            <span class="tag">CSS</span>
-            <span class="tag">JavaScript</span>
-          </div>
+ <div class="project-tags" aria-hidden="false">
+  <span class="tag">WordPress</span>
+  <span class="tag">Elementor</span>
+  <span class="tag">WooCommerce</span>
+  <span class="tag">SEO</span>
+  <span class="tag">HTML</span>
+  <span class="tag">CSS</span>
+  <span class="tag">JavaScript</span>
+</div>
+
 
           <div class="project-actions">
             <a href="https://rochebianca.al/" target="_blank" rel="noopener noreferrer" aria-label="Open Border Sleep website">Visit Site ↗</a>
@@ -1081,13 +1090,16 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
           <h3 class="project-title">Roche Bianca</h3>
           <p class="project-desc">A stylish WooCommerce jewelry platform highlighting Roche Bianca’s finest silver and gold craftsmanship with a smooth, elegant user experience.</p>
 
-          <div class="project-tags" aria-hidden="false">
-            <span class="tag">WordPress</span>
-            <span class="tag">SEO</span>
-            <span class="tag">HTML</span>
-            <span class="tag">CSS</span>
-            <span class="tag">JavaScript</span>
-          </div>
+ <div class="project-tags" aria-hidden="false">
+  <span class="tag">WordPress</span>
+  <span class="tag">Elementor</span>
+  <span class="tag">WooCommerce</span>
+  <span class="tag">SEO</span>
+  <span class="tag">HTML</span>
+  <span class="tag">CSS</span>
+  <span class="tag">JavaScript</span>
+</div>
+
 
           <div class="project-actions">
             <a href="https://rochebianca.com/" target="_blank" rel="noopener noreferrer" aria-label="Open Border Sleep website">Visit Site ↗</a>
@@ -1117,13 +1129,15 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 
   
 
-          <div class="project-tags" aria-hidden="false">
-            <span class="tag">WordPress</span>
-            <span class="tag">SEO</span>
-            <span class="tag">HTML</span>
-            <span class="tag">CSS</span>
-            <span class="tag">JavaScript</span>
-          </div>
+<div class="project-tags" aria-hidden="false">
+  <span class="tag">WordPress</span>
+  <span class="tag">Elementor</span>
+  <span class="tag">SEO</span>
+  <span class="tag">HTML</span>
+  <span class="tag">CSS</span>
+  <span class="tag">JavaScript</span>
+</div>
+
 
           <div class="project-actions">
             <a href="https://borderdme.com/" target="_blank" rel="noopener noreferrer" aria-label="Open Border Sleep website">Visit Site ↗</a>
@@ -1181,14 +1195,15 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
           <h3 class="project-title">Skylake Properties</h3>
           <p class="project-desc">SkyLake Properties is an integrated real estate investment firm that offers quality and affordable housing centered to the DMV.</p>
 
-        <div class="project-tags" aria-hidden="false">
-            <span class="tag">WordPress</span>
-            <span class="tag">SEO</span>
-            <span class="tag">HTML</span>
-            <span class="tag">CSS</span>
-            <span class="tag">JavaScript</span>
-          </div>
-          
+<div class="project-tags" aria-hidden="false">
+  <span class="tag">WordPress</span>
+  <span class="tag">Elementor</span>
+  <span class="tag">SEO</span>
+  <span class="tag">HTML</span>
+  <span class="tag">CSS</span>
+  <span class="tag">JavaScript</span>
+</div>
+
 
           <div class="project-actions">
             <a href="https://skylakedmv.com/" target="_blank" rel="noopener noreferrer" aria-label="Open Border Sleep website">Visit Site ↗</a>
