--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 
 
           <div class="project-actions">
-            <a href="https://www.zendiamond.com/" target="_blank" rel="noopener noreferrer" aria-label="Open Border Sleep website">Visit Site ↗</a>
+            <a href="https://zen-diamond.co.uk/" target="_blank" rel="noopener noreferrer" aria-label="Open Border Sleep website">Visit Site ↗</a>
           </div>
         </article>
 
@@ -1032,7 +1032,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 
 
           <div class="project-actions">
-            <a href="https://ia-international.com/zenuk/" target="_blank" rel="noopener noreferrer" aria-label="Open Border Sleep website">Visit Site ↗</a>
+            <a href="https://zen-diamond.co.uk/" target="_blank" rel="noopener noreferrer" aria-label="Open Border Sleep website">Visit Site ↗</a>
           </div>
         </article>
 
@@ -1529,4 +1529,5 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
