--- a/index.html
+++ b/index.html
@@ -1211,7 +1211,39 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
         </article>
 
 
+ <!-- Project 9 -->
+        <article class="project-card" role="listitem" aria-label="Zen">
+          <div class="project-media">
+            <!-- Slider -->
+            <div class="slider" data-slider tabindex="0" aria-roledescription="carousel">
+              <div class="slides" aria-hidden="false">
+                <img src="https://raw.githubusercontent.com/ozaragaryanfloyd-rgb/portfolio-site/main/images/a1.png" alt="Zen1" class="is-active">
+                <img src="https://raw.githubusercontent.com/ozaragaryanfloyd-rgb/portfolio-site/main/images/a2.png" alt="Zen2">
+               
+              </div>
 
+              <!-- dots created by JS -->
+              <div class="slider-dots" aria-hidden="true"></div>
+            </div>
+          </div>
+
+          <h3 class="project-title">Reedemer Hospice</h3>
+          <p class="project-desc">hospice services is designed to provide comfort, dignity, and support for patients and families during life's most challenging moments.</p>
+
+<div class="project-tags" aria-hidden="false">
+  <span class="tag">WordPress</span>
+  <span class="tag">Elementor</span>
+  <span class="tag">SEO</span>
+  <span class="tag">HTML</span>
+  <span class="tag">CSS</span>
+  <span class="tag">JavaScript</span>
+</div>
+
+
+          <div class="project-actions">
+            <a href="https://redeemerhospice.com/" target="_blank" rel="noopener noreferrer" aria-label="Open Border Sleep website">Visit Site ↗</a>
+          </div>
+        </article>
         <!-- Empty placeholder (you mentioned you'll add more) -->
       <!--   <div class="empty-state" role="listitem">
           I will personally add more projects here soon! <br>
@@ -1529,5 +1561,6 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
