--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 
         <div class="hero-ctas" role="group" aria-label="Primary actions">
           <a class="btn-primary" href="#projects">View Projects</a>
-          <a class="btn-outline" href="mailto:your.email@example.com">Email Me</a>
+          <a class="btn-outline" href="mailto:ozaragaryanfloyd@gmail.com">Email Me</a>
         </div>
       </div>
     </section>
@@ -1561,6 +1561,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
