--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
   <div style="padding:16px;flex:1;display:flex;flex-direction:column;">
     <div style="font-weight:800;font-size:18px">Border Sleep Therapy Solutions</div>
     <div style="font-size:13px;color:rgba(216,255,244,0.6);margin:6px 0;">
-      Shopify • HTML • CSS • JavaScript • Liquid • Performance + SEO
+      Shopify • HTML • CSS • JavaScript • Liquid 
     </div>
 
     <p style="font-size:14px;opacity:0.8;margin-top:8px;line-height:1.5">
@@ -526,6 +526,31 @@
     <!-- META stays at bottom -->
     <div class="meta" style="margin-top:auto;display:flex;justify-content:space-between;align-items:center;">
       <a href="https://redeemerhospice.com/" target="_blank" style="font-weight:700;color:var(--accent);text-decoration:none;">
+        View Project
+      </a>
+      
+    </div>
+  </div>
+</article>
+
+        <article class="project" style="display:flex;flex-direction:column;padding:0;overflow:hidden;background:var(--glass);border:1px solid rgba(0,255,213,0.05);backdrop-filter:blur(6px);transition:0.3s">
+
+  <img src="https://raw.githubusercontent.com/ozaragaryanfloyd-rgb/portfolio-site/main/images/ashift.png" 
+       style="width:100%;height:160px;object-fit:cover;opacity:0.9" />
+
+  <div style="padding:16px;flex:1;display:flex;flex-direction:column;">
+    <div style="font-weight:800;font-size:18px">The Shift Team</div>
+    <div style="font-size:13px;color:rgba(216,255,244,0.6);margin:6px 0;">
+      Shopify • HTML • CSS • JavaScript • Liquid • Performance + SEO
+    </div>
+
+    <p style="font-size:14px;opacity:0.8;margin-top:8px;line-height:1.5">
+      Break free from stress and overwhelm with The Shift Method™ — a neuroscience-based toolkit that helps you calm your mind, rewire emotional patterns, and build lasting resilience.
+    </p>
+
+    <!-- META stays at bottom -->
+    <div class="meta" style="margin-top:auto;display:flex;justify-content:space-between;align-items:center;">
+      <a href="https://www.bordersleep.com/" target="_blank" style="font-weight:700;color:var(--accent);text-decoration:none;">
         View Project
       </a>
       
@@ -748,4 +773,5 @@
 
     </body>
     </html>
+
 
