--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 
     <!-- META stays at bottom -->
     <div class="meta" style="margin-top:auto;display:flex;justify-content:space-between;align-items:center;">
-      <a href="https://www.bordersleep.com/" target="_blank" style="font-weight:700;color:var(--accent);text-decoration:none;">
+      <a href="https://theshiftteam.com/" target="_blank" style="font-weight:700;color:var(--accent);text-decoration:none;">
         View Project
       </a>
       
@@ -773,5 +773,6 @@
 
     </body>
     </html>
+
 
 
