--- a/index.html
+++ b/index.html
@@ -557,7 +557,33 @@
     </div>
   </div>
 </article>
-   
+
+<article class="project" style="display:flex;flex-direction:column;padding:0;overflow:hidden;background:var(--glass);border:1px solid rgba(0,255,213,0.05);backdrop-filter:blur(6px);transition:0.3s">
+
+  <img src="https://raw.githubusercontent.com/ozaragaryanfloyd-rgb/portfolio-site/main/images/high-angle-man.avif" 
+       style="width:100%;height:160px;object-fit:cover;opacity:0.9" />
+
+  <div style="padding:16px;flex:1;display:flex;flex-direction:column;">
+    <div style="font-weight:800;font-size:18px">Law Firm & Real Estate Websites</div>
+    <div style="font-size:13px;color:rgba(216,255,244,0.6);margin:6px 0;">
+      WordPress • HTML • CSS • JavaScript • Performance + SEO
+    </div>
+
+    <p style="font-size:14px;opacity:0.8;margin-top:8px;line-height:1.5">
+      High-converting websites built for law firms and real estate professionals, focused on clarity, trust, and lead generation. Optimized for speed, SEO, and long-term scalability.
+    </p>
+
+    <!-- META stays at bottom -->
+    <div class="meta" style="margin-top:auto;display:flex;justify-content:space-between;align-items:center;">
+      <a href="https://docs.google.com/spreadsheets/d/1TfO0KoikigG_RyPMnbTYz15b2NQOQL2jPo5b2_yvCDA/edit?usp=sharing" target="_blank" style="font-weight:700;color:var(--accent);text-decoration:none;">
+        View Projects
+      </a>
+      
+    </div>
+  </div>
+</article>
+
+        
 
     </div>
   </section>
@@ -773,6 +799,7 @@
 
     </body>
     </html>
+
 
 
 
